target/generated-sources/antlr4/uk/ac/ucl/shell/antlr/CallParser/CallParser.java
// Generated from uk\ac\u005Cucl\shell\antlr\CallParser\Call.g4 by ANTLR 4.7
package uk.ac.ucl.shell.antlr.CallParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CallParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, WHITE_SPACE=4, NON_KEYWORD=5, SEMI=6, PIPE=7, GREATER_THAN=8, LESS_THAN=9;
	public static final int
		RULE_compileUnit = 0, RULE_args = 1, RULE_arg = 2, RULE_no_quotes = 3, 
		RULE_quoted = 4, RULE_single_quotes = 5, RULE_single_quote_content = 6, RULE_double_quotes = 7,
		RULE_double_quote_content = 8, RULE_back_quotes = 9, RULE_back_quote_content = 10,
		RULE_keyword = 11;
	public static final String[] ruleNames = {
		"compileUnit", "args", "arg", "no_quotes", "quoted", "single_quotes", 
		"single_quote_content", "double_quotes", "double_quote_content", "back_quotes", "back_quote_content",
		"keyword"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'''", "'\"'", "'`'", null, null, "';'", "'|'", "'>'", "'<'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "WHITE_SPACE", "NON_KEYWORD", "SEMI", "PIPE", "GREATER_THAN", "LESS_THAN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Call.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CallParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompileUnitContext extends ParserRuleContext {
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CallParser.EOF, 0); }
		public List<TerminalNode> WHITE_SPACE() { return getTokens(CallParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(CallParser.WHITE_SPACE, i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compileUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitCompileUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompileUnitContext compileUnit() throws RecognitionException {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(24);
				match(WHITE_SPACE);
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30);
			args(0);
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(31);
				match(WHITE_SPACE);
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public ArgsContext cmd;
		public ArgsContext left_args;
		public Token io_operator;
		public ArgsContext file;
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public List<ArgsContext> args() {
			return getRuleContexts(ArgsContext.class);
		}
		public ArgsContext args(int i) {
			return getRuleContext(ArgsContext.class,i);
		}
		public List<TerminalNode> WHITE_SPACE() { return getTokens(CallParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(CallParser.WHITE_SPACE, i);
		}
		public TerminalNode GREATER_THAN() { return getToken(CallParser.GREATER_THAN, 0); }
		public TerminalNode LESS_THAN() { return getToken(CallParser.LESS_THAN, 0); }
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		return args(0);
	}

	private ArgsContext args(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArgsContext _localctx = new ArgsContext(_ctx, _parentState);
		ArgsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_args, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(40);
				arg();
				}
				break;
			case 2:
				{
				setState(41);
				arg();
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(42);
					match(WHITE_SPACE);
					}
					}
					setState(45); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WHITE_SPACE );
				setState(47);
				((ArgsContext)_localctx).left_args = args(5);
				}
				break;
			case 3:
				{
				setState(49);
				((ArgsContext)_localctx).io_operator = match(GREATER_THAN);
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE) {
					{
					{
					setState(50);
					match(WHITE_SPACE);
					}
					}
					setState(55);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(56);
				((ArgsContext)_localctx).file = args(0);
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(57);
					match(WHITE_SPACE);
					}
					}
					setState(60); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WHITE_SPACE );
				setState(62);
				((ArgsContext)_localctx).cmd = args(3);
				}
				break;
			case 4:
				{
				setState(64);
				((ArgsContext)_localctx).io_operator = match(LESS_THAN);
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE) {
					{
					{
					setState(65);
					match(WHITE_SPACE);
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(71);
				((ArgsContext)_localctx).file = args(0);
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(72);
					match(WHITE_SPACE);
					}
					}
					setState(75); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WHITE_SPACE );
				setState(77);
				((ArgsContext)_localctx).cmd = args(1);
				}
				break;
			}
			_ctx.stop = _input.LESS_THAN(-1);
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALESS_THAN_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(111);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						_localctx = new ArgsContext(_parentctx, _parentState);
						_localctx.cmd = _prevctx;
						_localctx.cmd = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_args);
						setState(81);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(85);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WHITE_SPACE) {
							{
							{
							setState(82);
							match(WHITE_SPACE);
							}
							}
							setState(87);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(88);
						((ArgsContext)_localctx).io_operator = match(GREATER_THAN);
						setState(92);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WHITE_SPACE) {
							{
							{
							setState(89);
							match(WHITE_SPACE);
							}
							}
							setState(94);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(95);
						((ArgsContext)_localctx).file = args(5);
						}
						break;
					case 2:
						{
						_localctx = new ArgsContext(_parentctx, _parentState);
						_localctx.cmd = _prevctx;
						_localctx.cmd = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_args);
						setState(96);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(100);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WHITE_SPACE) {
							{
							{
							setState(97);
							match(WHITE_SPACE);
							}
							}
							setState(102);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(103);
						((ArgsContext)_localctx).io_operator = match(LESS_THAN);
						setState(107);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WHITE_SPACE) {
							{
							{
							setState(104);
							match(WHITE_SPACE);
							}
							}
							setState(109);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(110);
						((ArgsContext)_localctx).file = args(3);
						}
						break;
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public No_quotesContext no_quote;
		public No_quotesContext no_quotes() {
			return getRuleContext(No_quotesContext.class,0);
		}
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public QuotedContext quoted() {
			return getRuleContext(QuotedContext.class,0);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_arg);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NON_KEYWORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				((ArgContext)_localctx).no_quote = no_quotes();
				setState(118);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(117);
					arg();
					}
					break;
				}
				}
				break;
			case T__0:
			case T__1:
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				quoted();
				setState(122);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(121);
					arg();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class No_quotesContext extends ParserRuleContext {
		public List<TerminalNode> NON_KEYWORD() { return getTokens(CallParser.NON_KEYWORD); }
		public TerminalNode NON_KEYWORD(int i) {
			return getToken(CallParser.NON_KEYWORD, i);
		}
		public No_quotesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_no_quotes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitNo_quotes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final No_quotesContext no_quotes() throws RecognitionException {
		No_quotesContext _localctx = new No_quotesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_no_quotes);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(127); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(126);
					match(NON_KEYWORD);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(129); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALESS_THAN_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuotedContext extends ParserRuleContext {
		public Single_quotesContext single_quotes() {
			return getRuleContext(Single_quotesContext.class,0);
		}
		public Double_quotesContext double_quotes() {
			return getRuleContext(Double_quotesContext.class,0);
		}
		public Back_quotesContext back_quotes() {
			return getRuleContext(Back_quotesContext.class,0);
		}
		public QuotedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quoted; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitQuoted(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuotedContext quoted() throws RecognitionException {
		QuotedContext _localctx = new QuotedContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_quoted);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				single_quotes();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				double_quotes();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				back_quotes();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_quotesContext extends ParserRuleContext {
		public Squote_contentContext single_quote_content() {
			return getRuleContext(Squote_contentContext.class,0);
		}
		public Single_quotesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_quotes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitSingle_quotes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_quotesContext single_quotes() throws RecognitionException {
		Single_quotesContext _localctx = new Single_quotesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_single_quotes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__0);
			setState(137);
			single_quote_content();
			setState(138);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Squote_contentContext extends ParserRuleContext {
		public List<TerminalNode> NON_KEYWORD() { return getTokens(CallParser.NON_KEYWORD); }
		public TerminalNode NON_KEYWORD(int i) {
			return getToken(CallParser.NON_KEYWORD, i);
		}
		public List<KeywordContext> keyword() {
			return getRuleContexts(KeywordContext.class);
		}
		public KeywordContext keyword(int i) {
			return getRuleContext(KeywordContext.class,i);
		}
		public List<TerminalNode> WHITE_SPACE() { return getTokens(CallParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(CallParser.WHITE_SPACE, i);
		}
		public Squote_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_quote_content; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitSquote_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Squote_contentContext single_quote_content() throws RecognitionException {
		Squote_contentContext _localctx = new Squote_contentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_single_quote_content);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << WHITE_SPACE) | (1L << NON_KEYWORD) | (1L << SEMI) | (1L << PIPE) | (1L << GREATER_THAN) | (1L << LESS_THAN))) != 0)) {
				{
				setState(145);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NON_KEYWORD:
					{
					setState(140);
					match(NON_KEYWORD);
					}
					break;
				case SEMI:
				case PIPE:
				case GREATER_THAN:
				case LESS_THAN:
					{
					setState(141);
					keyword();
					}
					break;
				case WHITE_SPACE:
					{
					setState(142);
					match(WHITE_SPACE);
					}
					break;
				case T__1:
					{
					setState(143);
					match(T__1);
					}
					break;
				case T__2:
					{
					setState(144);
					match(T__2);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Double_quotesContext extends ParserRuleContext {
		public Dquote_contentContext double_quote_content() {
			return getRuleContext(Dquote_contentContext.class,0);
		}
		public Double_quotesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_quotes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitDouble_quotes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Double_quotesContext double_quotes() throws RecognitionException {
		Double_quotesContext _localctx = new Double_quotesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_double_quotes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(T__1);
			setState(151);
			double_quote_content();
			setState(152);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dquote_contentContext extends ParserRuleContext {
		public Token content;
		public Dquote_contentContext double_quote_content() {
			return getRuleContext(Dquote_contentContext.class,0);
		}
		public TerminalNode NON_KEYWORD() { return getToken(CallParser.NON_KEYWORD, 0); }
		public TerminalNode SEMI() { return getToken(CallParser.SEMI, 0); }
		public TerminalNode PIPE() { return getToken(CallParser.PIPE, 0); }
		public TerminalNode GREATER_THAN() { return getToken(CallParser.GREATER_THAN, 0); }
		public TerminalNode LESS_THAN() { return getToken(CallParser.LESS_THAN, 0); }
		public TerminalNode WHITE_SPACE() { return getToken(CallParser.WHITE_SPACE, 0); }
		public Back_quotesContext back_quotes() {
			return getRuleContext(Back_quotesContext.class,0);
		}
		public Dquote_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_quote_content; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitDquote_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dquote_contentContext double_quote_content() throws RecognitionException {
		Dquote_contentContext _localctx = new Dquote_contentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_double_quote_content);
		int _la;
		try {
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case WHITE_SPACE:
			case NON_KEYWORD:
			case SEMI:
			case PIPE:
			case GREATER_THAN:
			case LESS_THAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				((Dquote_contentContext)_localctx).content = _input.LESS_THAN(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << WHITE_SPACE) | (1L << NON_KEYWORD) | (1L << SEMI) | (1L << PIPE) | (1L << GREATER_THAN) | (1L << LESS_THAN))) != 0)) ) {
					((Dquote_contentContext)_localctx).content = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(155);
				double_quote_content();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				back_quotes();
				setState(157);
				double_quote_content();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Back_quotesContext extends ParserRuleContext {
		public Bquote_contentContext content;
		public Bquote_contentContext back_quote_content() {
			return getRuleContext(Bquote_contentContext.class,0);
		}
		public Back_quotesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_back_quotes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitBack_quotes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Back_quotesContext back_quotes() throws RecognitionException {
		Back_quotesContext _localctx = new Back_quotesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_back_quotes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(T__2);
			setState(163);
			((Back_quotesContext)_localctx).content = back_quote_content();
			setState(164);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bquote_contentContext extends ParserRuleContext {
		public List<TerminalNode> NON_KEYWORD() { return getTokens(CallParser.NON_KEYWORD); }
		public TerminalNode NON_KEYWORD(int i) {
			return getToken(CallParser.NON_KEYWORD, i);
		}
		public List<KeywordContext> keyword() {
			return getRuleContexts(KeywordContext.class);
		}
		public KeywordContext keyword(int i) {
			return getRuleContext(KeywordContext.class,i);
		}
		public List<TerminalNode> WHITE_SPACE() { return getTokens(CallParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(CallParser.WHITE_SPACE, i);
		}
		public Bquote_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_back_quote_content; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitBquote_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bquote_contentContext back_quote_content() throws RecognitionException {
		Bquote_contentContext _localctx = new Bquote_contentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_back_quote_content);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << WHITE_SPACE) | (1L << NON_KEYWORD) | (1L << SEMI) | (1L << PIPE) | (1L << GREATER_THAN) | (1L << LESS_THAN))) != 0)) {
				{
				setState(171);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NON_KEYWORD:
					{
					setState(166);
					match(NON_KEYWORD);
					}
					break;
				case SEMI:
				case PIPE:
				case GREATER_THAN:
				case LESS_THAN:
					{
					setState(167);
					keyword();
					}
					break;
				case WHITE_SPACE:
					{
					setState(168);
					match(WHITE_SPACE);
					}
					break;
				case T__1:
					{
					setState(169);
					match(T__1);
					}
					break;
				case T__0:
					{
					setState(170);
					match(T__0);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeywordContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(CallParser.SEMI, 0); }
		public TerminalNode PIPE() { return getToken(CallParser.PIPE, 0); }
		public TerminalNode GREATER_THAN() { return getToken(CallParser.GREATER_THAN, 0); }
		public TerminalNode LESS_THAN() { return getToken(CallParser.LESS_THAN, 0); }
		public KeywordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyword; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallVisitor ) return ((CallVisitor<? extends T>)visitor).visitKeyword(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KeywordContext keyword() throws RecognitionException {
		KeywordContext _localctx = new KeywordContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_keyword);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SEMI) | (1L << PIPE) | (1L << GREATER_THAN) | (1L << LESS_THAN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 1:
			return args_sempred((ArgsContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean args_sempred(ArgsContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0:
			return precpred(_ctx, 4);
		case 1:
			return precpred(_ctx, 2);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}